# KIRO

./: README.md  background.js  content.css  content.js  enhanced-alt-text-inspector.js  enhanced-alt-text-styles.css  manifest.json  package.json  popup.html  popup.js  test_mcp_server.py  test_simple_server.py
.kiro/hooks/: manifest-permission-watcher.kiro.hook  pre-commit-lint-format.kiro.hook  wcag-documentation-hook.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/triple-threat-audit-orchestrator/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
mcp-servers/alt-text-generator/: README.md  pyproject.toml  requirements.txt  server.py  simple_server.py
